# photools

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TESTING.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.yml  photo_processor.py  pyproject.toml  test_api.sh  test_batch_import.py  test_celery_task.py  test_import.py  test_performance.py  test_upload_fix.py  testing_structure_analysis.md
alembic/: env.py
alembic/versions/: 2e1f6f978680_create_initial_schema.py  7026ec354b4a_add_collections_and_rating_system.py  9f53850aeeaa_add_v2_progressive_workflow_fields.py
docs/: API_CHANGE_TRACKING.md  CODE_QUALITY_STRATEGY.md  IMPLEMENTATION_STATUS.md  PHOTO_EDITOR_PAIN_POINTS.md  PROGRESSIVE_WORKFLOW_DESIGN.md  architecture-decisions.md
frontend-swift/: API-AUDIT-RESULTS.md  README.md  SETUP.md
frontend-swift/PhoTools/: APIService.swift  ContentView.swift  Theme.swift
frontend-swift/PhoTools/Models/: LibraryStore.swift  Photo.swift
frontend-swift/PhoTools/Models/Views/: CollectionsView.swift  ImportView.swift  LibraryView.swift  PhotoDetailView.swift  PhotoThumbnailView.swift  SidebarView.swift
frontend-swift/PhoTools/PhoTools/: PhoToolsApp.swift
frontend-swift/PhoTools/PhoTools.xcodeproj/: project.pbxproj
frontend-swift/PhoTools/PhoTools.xcodeproj/project.xcworkspace/xcuserdata/jonathandombrowski.xcuserdatad/: UserInterfaceState.xcuserstate
frontend-swift/PhoTools/PhoTools.xcodeproj/xcuserdata/jonathandombrowski.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend-swift/PhoTools/PhoToolsTests/: PhoToolsTests.swift
frontend-swift/PhoTools/PhoToolsUITests/: PhoToolsUITests.swift  PhoToolsUITestsLaunchTests.swift
scripts/: api-diff.sh  api-snapshot.sh  check-dependencies.sh  dev-start.sh  dev-stop.sh  init-db-local.sh  init_db.sh  init_db.sql  run-api.sh  run-worker.sh
src/: __init__.py
src/api/: README.md  main.py  test.sh
src/api/routes/: collections.py  filesystem.py  health.py  imports.py  photos.py
src/api/tests/: test_filesystem_endpoints.py
src/config/: settings.py
src/core/models/: scan_result.py
src/core/services/: directory_scanner.py  directory_scanner_test.py  file_system_service.py  file_system_service_test.py  photo_processor.py  photo_processor_test.py  photo_query_builder.py  photo_upload_service.py  preview_generator.py  preview_queue_service.py  preview_service.py  service_factory.py
src/core/services/directory_scanner/: __init__.py
src/core/services/file_system_service/: __init__.py
src/core/services/photo_import_service/: __init__.py
src/core/services/photo_import_service/file_system_service/: __init__.py
src/core/services/photo_processor/: __init__.py
src/core/services/photo_processor_service/: __init__.py
src/core/services/photo_upload_service/: __init__.py
src/core/services/preview_generator/: __init__.py
src/core/services/preview_queue_service/: __init__.py
src/core/services/preview_service/: __init__.py
src/core/storage/: __init__.py  base.py  local.py
src/core/tests/: test_photo_pipeline.py
src/infrastructure/database/: __init__.py  connection.py  models.py
src/workers/: __init__.py  celery_app.py  model_indexer.py  photo_processor.py
static/: index.html
tests/: conftest.py  system_status.md
tests/fixtures/: plan.md
tests/integration/: test_photo_pipeline.py
tests/integration/api/: test_filesystem_endpoints.py
tests/integration/config/: test_settings.py
tests/integration/utils/: test_helpers.py
tests/snapshots/api/: api_root.json  health.json  health.json.backup  photos_list.json  preview_stats.json  storage_info.json
tests/unit/core/services/: test_directory_scanner.py  test_file_system_service.py  test_photo_processor.py
tests/unit/core/services/directory_scanner/: test_directory_scanner.py
tests/unit/core/services/file_system_service/: test_file_system_service.py
tests/unit/core/services/photo_processor/: test_photo_processor.py
tests/unit/core/storage/: test_generate_storage_path.py
tests/utils/: test_helpers.py
