[tool.poetry]
name = "photools"
version = "0.1.0"
description = "Media cataloging suite for managing and executing AI model routing within a photo metadata database"
authors = ["Jonathan Dombrowski <jdombrowski416@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"

[poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
ruff = "^0.12.0"

[tool.poetry.scripts]
start = "photools.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I"]
target-version = "py311"
